--- a/MarsQA-1/MarsQA-1.csproj
+++ b/MarsQA-1/MarsQA-1.csproj
@@ -147,6 +147,7 @@
     <Compile Include="NunitPages\Helpers\AutoIt.cs" />
     <Compile Include="NunitPages\Helpers\WaitHelper.cs" />
     <Compile Include="NunitPages\Pages\ManageListingPage.cs" />
+    <Compile Include="NunitPages\Pages\ManageRequestPage.cs" />
     <Compile Include="NunitPages\Pages\ProfilePage\ChangePassword.cs" />
     <Compile Include="NunitPages\Pages\ProfilePage\ProfilePage.cs" />
     <Compile Include="NunitPages\Pages\HomePage\SignUp.cs" />
@@ -161,6 +162,7 @@
     <Compile Include="NunitPages\Pages\HomePage\SignIn.cs" />
     <Compile Include="NunitPages\Pages\ShareSkillPage.cs" />
     <Compile Include="NunitPages\Utils\Start.cs" />
+    <Compile Include="NunitTests\ManageRequestTest.cs" />
     <Compile Include="NunitTests\ProfilePagesTest\CertificatesTabTest.cs" />
     <Compile Include="NunitTests\ProfilePagesTest\EducationTabTest.cs" />
     <Compile Include="NunitTests\ProfilePagesTest\LanguageTabTest.cs" />
